<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
        >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/text_label_desired_number_of_courses"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/desired_number_of_courses"
                    android:layout_weight="3"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <com.google.android.material.slider.Slider
                        android:id="@+id/slider_input_desired_number_of_courses"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="0dp"
                        android:valueFrom="1"
                        android:valueTo="10"
                        android:stepSize="1"
                        android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
                        android:value="@string/text_input_desired_number_of_courses_default_value"
                        />
                    <TextView
                        android:id="@+id/text_display_desired_number_of_courses"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:text="@string/text_input_desired_number_of_courses_default_value"
                        />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/text_subheading_burden_capacity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_subheading_burden_capacity"
                    />

                <RadioGroup
                    android:id="@+id/burden_capacity_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >
                    <RadioButton
                        android:id="@+id/burden_capacity_high_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/burden_capacity_high_radio_button_label"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_description_burden_cap_high"
                        />

                    <RadioButton
                        android:id="@+id/burden_capacity_medium_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/burden_capacity_medium_radio_button_label"
                        android:checked="true"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_description_burden_cap_medium" />

                    <RadioButton
                        android:id="@+id/burden_capacity_low_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/burden_capacity_low_radio_button_label" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_description_burden_cap_low" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                >
                <TextView
                    android:id="@+id/text_subheading_class_distribution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_subheading_class_distribution"
                    />
                <RadioGroup
                    android:id="@+id/class_distribution_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <RadioButton
                        android:id="@+id/burden_capacity_concentrated_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/class_distribution_concentrated_radio_button_label"
                        android:checked="true"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_description_class_distribution_concentrated" />

                    <RadioButton
                        android:id="@+id/burden_capacity_sparse_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/class_distribution_sparse_radio_button_label" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_description_class_distribution_sparrse" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>