<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_grad_plans">

    <fragment
        android:id="@+id/navigation_grad_plans"
        android:name="io.trishul.classplanner.ui.gradplans.GradPlansFragment"
        android:label="@string/title_class_plans"
        tools:layout="@layout/fragment_grad_plans" />

    <fragment
        android:id="@+id/navigation_class_plans"
        android:name="io.trishul.classplanner.ui.classplans.ClassPlansFragment"
        android:label="@string/title_class_plans"
        tools:layout="@layout/fragment_grad_plans" />

    <fragment
        android:id="@+id/navigation_classes"
        android:name="io.trishul.classplanner.ui.classes.ClassesFragment"
        android:label="@string/title_classes"
        tools:layout="@layout/fragment_classes" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="io.trishul.classplanner.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_classes" />
</navigation>